--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ language: node_js
 node_js:
   - "0.12"
 before_install:
-  - "curl https://install.meteor.com | /bin/sh"
-script:
-  - "meteor test-packages"
+  - "curl -L http://git.io/ejPSng | /bin/sh"
