--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ node_js:
   - "0.12"
 before_install:
   - "curl -L http://git.io/ejPSng | /bin/sh"
+  - "chmod +x travis.sh"
+env:
+  TEST_COMMAND=./travis.sh
