--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-sudo:required
 language: node_js
 node_js:
   - "0.12"
 before_install:
-  - "curl -L https://raw.githubusercontent.com/sf-wind/meteor-velocity-travis-ci/master/configure.sh | /bin/sh"
+  - "curl https://install.meteor.com/ | sh"
