--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 sudo: required
 language: node_js
-env:
-  - JASMINE_BROWSER=firefox
 node_js:
   - "0.12"
 before_install:
   - export DISPLAY=:99.0
+  - export JASMINE_BROWSER=firefox
   - sh -e /etc/init.d/xvfb start
   - curl https://install.meteor.com/ | sh
