--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "0.12"
 before_install:
   - export DISPLAY=:99.0
-  - export JASMINE_BROWSER=firefox
+  - export JASMINE_BROWSER=Firefox
   - sh -e /etc/init.d/xvfb start
   - curl https://install.meteor.com/ | sh
+env:
+ - JASMINE_BROWSER=Firefox
