--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/buildboard/buildboard#readme",
   "devDependencies": {
     "velocity-cli": "^0.4.3"
+  },
+  "dependencies": {
+    "lodash.get": "^3.7.0",
+    "lodash.mapvalues": "^3.0.1"
   }
 }
